--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,24 @@
-<div
-  *ngIf="router.url === '/general'; else elseIfBlock"
-  class="mt-5 d-flex flex-column align-items-center"
->
-  <form [formGroup]="fg" (ngSubmit)="onSubmit()">
-    <div class="d-flex justify-content-center">
+<div *ngIf="router.url === '/general'; else elseIfBlock" class="mt-5 d-flex flex-column align-items-center fondo">
+    <div class="justify-content-center">
       <h1>
-        <strong>This video is private</strong>
+        <strong>BIENVENIDO AL JUEGO DE *NO SE QUE NOMBRE TODAVIA*</strong>
       </h1>
-      <mat-form-field appearance="outline">
-        <mat-label>Enter your password</mat-label>
-        <input
-          matInput
-          formControlName="password"
-          [type]="hide ? 'password' : 'text'"
-        />
-        <button
-          mat-icon-button
-          matSuffix
-          (click)="hide = !hide"
-          [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide"
-        >
-          <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-        </button>
-      </mat-form-field>
-      <button class="ms-3" type="submit" mat-flat-button color="primary">
-        Send
-      </button>
+      <br>
+      <div class="botones">
+        <button class="ms-3" type="submit" mat-flat-button color="secondary">Adivina la jugada</button>
+        <button class="ms-3" type="submit" mat-flat-button color="secondary">Quiz de valorant</button>
+      </div>
+
+      <br>
+      <br>
+
+      <div class="botones">
+        <button class="ms-3" type="submit" mat-flat-button color="secondary">Jett</button>
+        <button class="ms-3" type="submit" mat-flat-button color="secondary">KillJoy</button>
+        <button class="ms-3" type="submit" mat-flat-button color="secondary">Raze</button>
+        <button class="ms-3" type="submit" mat-flat-button color="secondary">Raze</button>
+      </div>
     </div>
-  </form>
 </div>
 <ng-template #elseIfBlock>
   <router-outlet></router-outlet>
