--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,1 @@
-<div *ngIf="router.url === '/general'; else elseIfBlock" class="mt-5 d-flex flex-column align-items-center fondo">
-    <div class="justify-content-center">
-      <h1>
-        <strong>BIENVENIDO AL JUEGO DE *NO SE QUE NOMBRE TODAVIA*</strong>
-      </h1>
-      <br>
-      <div class="botones">
-        <button class="ms-3" type="submit" mat-flat-button color="secondary">Adivina la jugada</button>
-        <button class="ms-3" type="submit" mat-flat-button color="secondary">Quiz de valorant</button>
-      </div>
-
-      <br>
-      <br>
-
-      <div class="botones">
-        <button class="ms-3" type="submit" mat-flat-button color="secondary">Jett</button>
-        <button class="ms-3" type="submit" mat-flat-button color="secondary">KillJoy</button>
-        <button class="ms-3" type="submit" mat-flat-button color="secondary">Raze</button>
-        <button class="ms-3" type="submit" mat-flat-button color="secondary">Raze</button>
-      </div>
-    </div>
-</div>
-<ng-template #elseIfBlock>
-  <router-outlet></router-outlet>
-</ng-template>
+<p>esto furula!</p>
