--- a/src/app/adivina-jugada/adivina-jugada.component.html
+++ b/src/app/adivina-jugada/adivina-jugada.component.html
@@ -1,16 +1,27 @@
+
 <div class="justify-content-center">
       <h1>
-        <strong>ELIGE PERSONAJES</strong>
+        <strong>ELIGE PERSONAJE</strong>
       </h1>
       <br>
-      <div class="botones justify-content-center">
         <a routerLink="/general" class="nav-link" routerLinkActive="active">Go back</a>
         <br>
-        <a routerLink="/adivinaKj" class="nav-link" routerLinkActive="active">KJ</a>
-        <a routerLink="/adivinaJett" class="nav-link" routerLinkActive="active">jett</a>
-      </div>
+        <div class="justify-content-center"> 
+        </div>
 
-      <br>
-      <br>
+        <div class="container align-content-center">
+          <div class="row">
+            <div class="col-sm">
+              <button mat-flat-button id="botonPersonaje" routerLink="/adivinaKj" class="nav-link" routerLinkActive="active">KJ</button>
+              <img width="200" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt53405c26141beff8/5f21fda671ec397ef9bf0894/V_AGENTS_587x900_KillJoy_.png">
+            </div>
+            <div class="col-sm">
+              <button mat-flat-button id="botonPersonaje" routerLink="/adivinaJett" class="nav-link" routerLinkActive="active">jett</button>
+              <img width="200" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/bltceaa6cf20d328bd5/5eb7cdc1b1f2e27c950d2aaa/V_AGENTS_587x900_Jett.png">
+            </div>
+          </div>
+        </div>
+
+
 </div>
 
