--- a/src/app/adivina-jett/adivina-jett.component.html
+++ b/src/app/adivina-jett/adivina-jett.component.html
@@ -1,3 +1,5 @@
-<a routerLink="/adivinaJugada" class="nav-link" routerLinkActive="active">Go back</a>
+<button routerLink="/adivinaJugada" class="nav-link" routerLinkActive="active">Go back</button>
 <br>
-<p>adivina-jett works!</p>
+<div class="contenedorVideo">
+    <video id="videojs" class="video-js" controls muted playsinline preload="none" src= "../../assets/videos/clip-kj.mp4" poster= "../../assets/videos/VALORANT_Jett_Dark-scaled.jpg"></video>
+</div>
