--- a/src/app/adivina-kj/adivina-kj.component.html
+++ b/src/app/adivina-kj/adivina-kj.component.html
@@ -1,3 +1,7 @@
-<a routerLink="/adivinaJugada" class="nav-link" routerLinkActive="active">Go back</a>
+<button routerLink="/adivinaJugada" class="nav-link" routerLinkActive="active">Go back</button>
 <br>
-<p>adivina-kj works!</p>
+
+
+<div class="contenedorVideo">
+    <video id="videojs" class="video-js" controls muted playsinline preload="none" src= "../../assets/videos/clip-kj.mp4" poster= "../../assets/videos/KillJoy_Wallpapers_blue2-scaled-1.jpg"></video>
+</div>
