--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -1,11 +1,11 @@
-/*PALETA DE COLORES*/
+/**********PALETA DE COLORES************/
 $primary-color: #FD4556;
 $secondary-color: #BD3944;
 $tertiary-color: #53212B;
 $text-color: #FFFBF5;
 $black-color: #000000;
 $green-color: #0FD2B1;
-
+/**************************************/
 
 .fondo{
     height: 600px;
