--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,4 +1,3 @@
-<p>quiz works!</p>
 
-<a routerLink="/general" class="nav-link" routerLinkActive="active">Go back</a>
+<button routerLink="/general" class="nav-link" routerLinkActive="active">Go back</button>
 
