--- a/src/app/adivina-jugada/adivina-jugada.component.html
+++ b/src/app/adivina-jugada/adivina-jugada.component.html
@@ -4,20 +4,28 @@
         <strong>ELIGE PERSONAJE</strong>
       </h1>
       <br>
-        <a routerLink="/general" class="nav-link" routerLinkActive="active">Go back</a>
+        <button routerLink="/general" class="nav-link" routerLinkActive="active">Go back</button>
         <br>
         <div class="justify-content-center"> 
         </div>
 
         <div class="container align-content-center">
           <div class="row">
-            <div class="col-sm">
-              <button mat-flat-button id="botonPersonaje" routerLink="/adivinaKj" class="nav-link" routerLinkActive="active">KJ</button>
-              <img width="200" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt53405c26141beff8/5f21fda671ec397ef9bf0894/V_AGENTS_587x900_KillJoy_.png">
+            <div class="col">
+              <div class="row">
+                <img id="jettkj" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt53405c26141beff8/5f21fda671ec397ef9bf0894/V_AGENTS_587x900_KillJoy_.png">
+              </div>
+              <div class="row">
+                <button mat-flat-button id="botonPersonaje" routerLink="/adivinaKj" class="nav-link" routerLinkActive="active">KJ</button>
+              </div>
             </div>
-            <div class="col-sm">
-              <button mat-flat-button id="botonPersonaje" routerLink="/adivinaJett" class="nav-link" routerLinkActive="active">jett</button>
-              <img width="200" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/bltceaa6cf20d328bd5/5eb7cdc1b1f2e27c950d2aaa/V_AGENTS_587x900_Jett.png">
+            <div class="col">
+              <div class="row">
+                <img id="jettkj" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/bltceaa6cf20d328bd5/5eb7cdc1b1f2e27c950d2aaa/V_AGENTS_587x900_Jett.png">
+              </div>
+              <div class="row">
+                <button mat-flat-button id="botonPersonaje" routerLink="/adivinaJett" class="nav-link" routerLinkActive="active">jett</button>
+              </div>
             </div>
           </div>
         </div>
