--- a/src/app/adivina-jugada/adivina-jugada.component.html
+++ b/src/app/adivina-jugada/adivina-jugada.component.html
@@ -4,9 +4,12 @@
         <strong>ELIGE PERSONAJE</strong>
       </h1>
       <br>
-        <button routerLink="/general" class="nav-link" routerLinkActive="active">Go back</button>
+      <button routerLink="/general" class="nav-link botonVolver" routerLinkActive="active">
+        <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 24 24" fill="none" stroke="#FFFBF5" stroke-width="2" stroke-linecap="butt" stroke-linejoin="round"><path d="M11 17l-5-5 5-5M18 17l-5-5 5-5"/></svg>
+        VOLVER AL INICIO
+      </button>
         <br>
-        <div class="justify-content-center"> 
+        <div class="justify-content-center">
         </div>
 
         <div class="container align-content-center">
@@ -29,6 +32,7 @@
             </div>
           </div>
         </div>
+
 
 
 </div>
