--- a/src/app/adivina-kj/adivina-kj.component.html
+++ b/src/app/adivina-kj/adivina-kj.component.html
@@ -1,4 +1,7 @@
-<button routerLink="/adivinaJugada" class="nav-link" routerLinkActive="active">Go back</button>
+<button routerLink="/adivinaJugada" class="nav-link botonVolver" routerLinkActive="active">
+  <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 24 24" fill="none" stroke="#FFFBF5" stroke-width="2" stroke-linecap="butt" stroke-linejoin="round"><path d="M11 17l-5-5 5-5M18 17l-5-5 5-5"/></svg>
+  VOLVER A PERSONAJES
+</button>
 <br>
 
 
