--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,16 +1,22 @@
 <div *ngIf="router.url === '/general'; else elseIfBlock" class="mt-5 d-flex flex-column align-items-center fondo">
     <div class="justify-content-center">
       <h1>
-        <strong>BIENVENIDO AL JUEGO DE *NO SE QUE NOMBRE TODAVIA*</strong>
+        <strong>BIENVENID@s A VALORANT INTERACTIVE GAME</strong>
       </h1>
       <br>
-      <div class="botones justify-content-center">
-        <a routerLink="/adivinaJugada" class="nav-link" routerLinkActive="active">Adivina la jugada</a>
-        <a routerLink="/quiz" class="nav-link" routerLinkActive="active">Quiz de valorant</a>
-      </div>
 
-      <br>
-      <br>
+
+
+
+        <!--<button routerLink="/adivinaJugada"class="nav-link btnQuiz" routerLinkActive="active">QUIZ  AGENTES</button>
+        <br>
+        <button routerLink="/adivinaJugada" class="nav-link btnJugada" routerLinkActive="active">ADIVINA LA JUGADA</button>-->
+
+        <div class="container">
+          <a routerLink="/adivinaJugada" class="btnJugada" routerLinkActive="active">Adivina la jugada</a>
+          <a routerLink="/quiz" class="btnQuiz" routerLinkActive="active">Quiz de valorant</a>
+        </div>
+
 
     </div>
 </div>
