--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -22,7 +22,7 @@ a, h1{
 }
 
 h1{
-    margin-bottom: 100px;
+    margin-bottom: 90px;
 }
 
 a{
@@ -33,3 +33,109 @@ a{
 a:hover{
     color: $green-color;
 }
+
+.container {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  gap: 9px 0px;
+  grid-auto-flow: row;
+  padding-top: 50px;
+
+}
+
+
+
+.btnQuiz{text-decoration:none; text-align:center;
+  padding:21px 100px;
+  border:solid 1px #720046;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius: 4px;
+  font:50px Verdana, Geneva, sans-serif;
+  font-weight:bold;
+  color:#ffffff;
+  background-color:#bd3944;
+  background-image: -moz-linear-gradient(top, #bd3944 0%, #fd4558 100%);
+  background-image: -webkit-linear-gradient(top, #bd3944 0%, #fd4558 100%);
+  background-image: -o-linear-gradient(top, #bd3944 0%, #fd4558 100%);
+  background-image: -ms-linear-gradient(top, #bd3944 0% ,#fd4558 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fd4558', endColorstr='#fd4558',GradientType=0 );
+  background-image: linear-gradient(top, #bd3944 0% ,#fd4558 100%);
+  -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+  -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;
+  box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+
+   }
+  .btnQuiz:hover{
+  padding:21px 100px;
+  border:solid 1px #720046;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius: 4px;
+  font:50px Verdana, Geneva, sans-serif;
+  font-weight:bold;
+  color:#ffffff;
+  background-color:#fd4558;
+  background-image: -moz-linear-gradient(top, #fd4558 0%, #53212b 100%);
+  background-image: -webkit-linear-gradient(top, #fd4558 0%, #53212b 100%);
+  background-image: -o-linear-gradient(top, #fd4558 0%, #53212b 100%);
+  background-image: -ms-linear-gradient(top, #fd4558 0% ,#53212b 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#53212b', endColorstr='#53212b',GradientType=0 );
+  background-image: linear-gradient(top, #fd4558 0% ,#53212b 100%);
+  -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+  -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;
+  box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+
+  }
+
+  .btnJugada{
+    text-decoration:none; text-align:center;
+    padding:21px 100px;
+    border:solid 1px #720046;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius: 4px;
+    font:50px Verdana, Geneva, sans-serif;
+    font-weight:bold;
+    color:#ffffff;
+    background-color:#bd3944;
+    background-image: -moz-linear-gradient(top, #bd3944 0%, #fd4558 100%);
+    background-image: -webkit-linear-gradient(top, #bd3944 0%, #fd4558 100%);
+    background-image: -o-linear-gradient(top, #bd3944 0%, #fd4558 100%);
+    background-image: -ms-linear-gradient(top, #bd3944 0% ,#fd4558 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fd4558', endColorstr='#fd4558',GradientType=0 );
+    background-image: linear-gradient(top, #bd3944 0% ,#fd4558 100%);
+    -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+    -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;
+    box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+     }
+
+    .btnJugada:hover{
+    padding:21px 100px;
+    border:solid 1px #720046;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius: 4px;
+    font:50px Verdana, Geneva, sans-serif;
+    font-weight:bold;
+    color:#ffffff;
+    background-color:#fd4558;
+    background-image: -moz-linear-gradient(top, #fd4558 0%, #53212b 100%);
+    background-image: -webkit-linear-gradient(top, #fd4558 0%, #53212b 100%);
+    background-image: -o-linear-gradient(top, #fd4558 0%, #53212b 100%);
+    background-image: -ms-linear-gradient(top, #fd4558 0% ,#53212b 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#53212b', endColorstr='#53212b',GradientType=0 );
+    background-image: linear-gradient(top, #fd4558 0% ,#53212b 100%);
+    -webkit-box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+    -moz-box-shadow: 0px 0px 2px #bababa,  inset 0px 0px 1px #ffffff;
+    box-shadow:0px 0px 2px #bababa, inset 0px 0px 1px #ffffff;
+
+    }
+
+
+
+
+
+
+
