--- a/src/app/adivina-kj/adivina-kj.component.scss
+++ b/src/app/adivina-kj/adivina-kj.component.scss
@@ -7,14 +7,10 @@ $black-color: #000000;
 $green-color: #0FD2B1;
 /**************************************/
 
-
-
-
 video{
     width: 100%;
     height: 100%;
     border-radius: 20px;
-
 }
 
 .contenedorVideo{
@@ -22,18 +18,20 @@ video{
     width:60%;
     padding: 10px;
     padding-top: 4%;
+    margin-top: 4%;
 }
+
 .botonVolver{
-  position:fixed;
-width:400px;
-height:60px;
-top:40px;
-left:40px;
-  background-color: transparent;
-color:$text-color;
-border-radius:50px;
-  font-family: 'Oswald', sans-serif;
-  font-size: calc(5px + 1.5vw);
-  border-color: transparent;
-text-align:center;
+    position:fixed;
+	width:400px;
+	height:60px;
+	top:40px;
+	left:40px;
+    background-color: transparent;
+	color:$text-color;
+	border-radius:50px;
+    font-family: 'Oswald', sans-serif;
+    font-size: calc(5px + 1.5vw);
+    border-color: transparent;
+	text-align:center;
 }
