--- a/src/app/adivina-jugada/adivina-jugada.component.scss
+++ b/src/app/adivina-jugada/adivina-jugada.component.scss
@@ -12,34 +12,72 @@ h1{
     font-size: calc(8px + 4vw);
     font-family: 'Oswald', sans-serif;
     text-align: center;
-    margin-top: 5%;
+    margin-top: 4%;
 }
 
-.botonPersonaje{
-    width: 45%;
-    display: block;
-    margin-left: 10% !important;
-    margin-right: 10% !important;
+.botonVolver{
+    position:fixed;
+	width:200px;
+	height:60px;
+	top:40px;
+	left:40px;
+    background-color: transparent;
+	color:$text-color;
+	border-radius:50px;
+    font-family: 'Oswald', sans-serif;
+    font-size: calc(5px + 1.5vw);
+    border-color: transparent;
+	text-align:center;
 }
 
-#jettkj{
-    width: 45%;
+.botonVolver img{
+    width: 40px;
+    height: 40px;
+}
+
+#borderButton{
+    width: 55%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2px;
+    border: 2px  solid $text-color;
+    margin-top: 30px;
+}
+
+#botonPersonaje{
+    width: 100%;
+    opacity: 90%;
     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin: auto;
+    padding: 3px;
+    font-family: 'Oswald', sans-serif;
+    font-size: calc(4px + 1vw);
+    background-color: $text-color;
+    color: $tertiary-color;
+    border-radius: 0px;
+}
+
+#jett{
+    width: 45%;
+    opacity: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    transition-timing-function: ease-in;
+}
+
+#kj{
+    width: 45%;
+    opacity: 0%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.botonVolver{
-  position:fixed;
-width:400px;
-height:60px;
-top:40px;
-left:40px;
-  background-color: transparent;
-color:$text-color;
-border-radius:50px;
-  font-family: 'Oswald', sans-serif;
-  font-size: calc(5px + 1.5vw);
-  border-color: transparent;
-text-align:center;
-}
+.blur-in-expand{
+    animation:blur-in-expand 0.4s linear both
+} 
+
+@keyframes blur-in-expand{
+    0%{transform:scale(0);filter:blur(12px);opacity:0}
+    100%{transform:scale(1);filter:blur(0);opacity:1}}
