--- a/src/app/adivina-jugada/adivina-jugada.component.html
+++ b/src/app/adivina-jugada/adivina-jugada.component.html
@@ -7,9 +7,7 @@
       <h1>
         <strong>ELIGE PERSONAJE</strong>
       </h1>
-      <br>
-      <br>
-      <br>
+      <br class="br">
         <div class="justify-content-center"> 
         </div>
 
@@ -32,6 +30,16 @@
               <div class="row">
                 <div id="borderButton">
                   <a mat-flat-button id="botonPersonaje" routerLink="/adivinaJett" class="nav-link " routerLinkActive="active">JETT</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <img id="jett" class="blur-in-expand" src="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt6fef56a8182d0a81/5ebf2c2798f79d6925dbd6b4/V_AGENTS_587x900_ALL_Raze_2.png">
+              </div>
+              <div class="row">
+                <div id="borderButton">
+                  <a mat-flat-button id="botonPersonaje" routerLink="/adivinaRaze" class="nav-link " routerLinkActive="active">RAZE</a>
                 </div>
               </div>
             </div>
