--- a/src/app/adivina-jugada/adivina-jugada.component.scss
+++ b/src/app/adivina-jugada/adivina-jugada.component.scss
@@ -13,7 +13,9 @@ h1{
     font-family: 'Oswald', sans-serif;
     text-align: center;
     margin-top: 4%;
+    margin-bottom: 7%;
 }
+
 
 .botonVolver{
     position:fixed;
