--- a/src/app/adivina-jett/adivina-jett.component.html
+++ b/src/app/adivina-jett/adivina-jett.component.html
@@ -2,7 +2,6 @@
   <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 24 24" fill="none" stroke="#FFFBF5" stroke-width="2" stroke-linecap="butt" stroke-linejoin="round"><path d="M11 17l-5-5 5-5M18 17l-5-5 5-5"/></svg>
   VOLVER A PERSONAJES
 </button>
-<br>
 <div class="contenedorVideo">
-    <video id="videojs" class="video-js" controls muted playsinline preload="none" src= "../../assets/videos/clip-kj.mp4" poster= "../../assets/videos/VALORANT_Jett_Dark-scaled.jpg"></video>
+  <video id="videojs" class="video-js vjs-big-play-centered" controls playsinline preload="none" poster= "../../assets/images/VALORANT_Jett_Dark-scaled.jpg"></video>
 </div>
