--- a/src/app/adivina-kj/adivina-kj.component.html
+++ b/src/app/adivina-kj/adivina-kj.component.html
@@ -1,10 +1,8 @@
 <button routerLink="/adivinaJugada" class="nav-link botonVolver" routerLinkActive="active">
   <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 24 24" fill="none" stroke="#FFFBF5" stroke-width="2" stroke-linecap="butt" stroke-linejoin="round"><path d="M11 17l-5-5 5-5M18 17l-5-5 5-5"/></svg>
-  VOLVER A PERSONAJES
+  INICIO
 </button>
-<br>
-
 
 <div class="contenedorVideo">
-    <video id="videojs" class="video-js" controls muted playsinline preload="none" src= "../../assets/videos/clip-kj.mp4" poster= "../../assets/videos/KillJoy_Wallpapers_blue2-scaled-1.jpg"></video>
+  <video id="videojs"  class="video-js vjs-big-play-centered" controls playsinline preload="none" poster= "../../assets/images/KillJoy_Wallpapers_blue2-scaled-1.jpg"></video>
 </div>
