--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -13,8 +13,14 @@
         <button routerLink="/adivinaJugada" class="nav-link btnJugada" routerLinkActive="active">ADIVINA LA JUGADA</button>-->
 
         <div class="container">
-          <a routerLink="/adivinaJugada" class="btnInicio" routerLinkActive="active">Adivina la jugada</a>
-          <a routerLink="/quiz" class="btnInicio" routerLinkActive="active">Quiz de valorant</a>
+          <div id="borderButton">
+            <a routerLink="/adivinaJugada" class="btnInicio" routerLinkActive="active">Adivina la jugada</a>
+
+          </div>
+          <br>
+          <div id="borderButton">          
+            <a routerLink="/quiz" class="btnInicio" routerLinkActive="active">Quiz de valorant</a>
+          </div>
         </div>
 
 
