--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -22,30 +22,35 @@ a, h1{
     margin-top: 5%;
 }
 
+#borderButton{
+    border: 2px  solid $primary-color;
+    
+
+}
+
 h1{
-    margin-bottom: 90px;
+    margin-bottom: 100px;
+    font-size: calc(7px + 3.5vw);
+    
 }
 
 a{
     font-size: calc(5px + 1vw);
-    margin-top: 2%;
+    margin-top: 1px;
 }
 
-.container {
+.container div {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-auto-columns: 1fr;
-  gap: 9px 0px;
-  grid-auto-flow: row;
-  padding-top: 50px;
+  padding: 5px;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btnInicio{
   text-decoration:none; 
   text-align:center;
   padding:21px 90px;
-  margin-left: 10%;
-  margin-right: 10%;
   border:solid 1px $tertiary-color;
 //   border:solid 2px $text-color;
   border-radius: 0px;
