Preguntas quiz terminadas
Solo queda retocar y añadir el video en si

--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -4,3 +4,6 @@
   VOLVER AL INICIO
 </button>
 
+<div class="contenedorVideo">
+  <video id="videojs"  class="video-js vjs-big-play-centered" controls playsinline preload="none" poster= "../../assets/images/poster-quiz.jpg"></video>
+</div>
